[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/enemies/FireSlime.gd" type="Script" id=1]
[ext_resource path="res://spriteframes/slime_spriteframes.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/UI/healthbar_enemy_full.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/healthbar_enemy_empty.png" type="Texture" id=4]
[ext_resource path="res://scenes/particles/FireDetonationParticle.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/enemies/palettes/fire_slime_palette.png" type="Texture" id=8]
[ext_resource path="res://scenes/status_effects/FrozenStatus.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/status_effects/GroundedStatus.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/enemies/components/WeaknessDisplayComponent.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/misc/light_circle.png" type="Texture" id=12]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform sampler2D palette;
uniform bool skip_first_row = true;
uniform bool use_palette_alpha = false;
uniform float fps = 6;

void fragment() {
	vec4 original_color = texture(TEXTURE, UV);
	ivec3 colori = ivec3(round(original_color.rgb * 255.0));
	
	ivec2 color_count = textureSize(palette, 0);
	
	float idx = -1.0;
	for (int i = 0; i < color_count.x; i++) {
		vec3 color2 = texture(palette, vec2(float(i) / float(color_count.x - 1), 0)).rgb;
		ivec3 colori2 = ivec3(round(color2 * 255.0));
		
		if (colori == colori2) {
			idx = float(i);
			break;
		}
	}
	
	if (idx >= 0.0) {
		vec2 uv;
		uv.x = idx / float(color_count.x - 1);
		uv.y = (mod(TIME * fps, max(float(color_count.y - 1 - int(skip_first_row)), 1.0)) + float(skip_first_row))  / float(color_count.y - 1);
		
		vec4 palette_color = texture(palette, uv);
		COLOR = vec4(palette_color.rgb, mix(original_color.a, palette_color.a, float(use_palette_alpha)));
	} else {
		COLOR = original_color;
	}
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0
shader_param/palette = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.36, 15.1008 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.1874
height = 20.9775

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.05

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.4
loop = true

[sub_resource type="CircleShape2D" id=5]
radius = 150.0

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 7 )

[node name="FireSlime" type="KinematicBody2D" groups=["Enemy", "EnemyEntity", "Physical"]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( 0, -30 )
scale = Vector2( 5, 5 )
frames = ExtResource( 2 )
animation = "dead"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="WeaknessDisplayComponent" parent="." instance=ExtResource( 11 )]
position = Vector2( -5, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy", "Hostile"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.595276, -14.6835 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -14 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -59.8396
margin_top = -68.9651
margin_right = -29.8396
margin_bottom = -62.9651
rect_scale = Vector2( 4, 4 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="HitDelayTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 8 )
anims/explode = SubResource( 4 )

[node name="FireDetonationParticle" parent="." instance=ExtResource( 6 )]
scale = Vector2( 3.7, 3.7 )
amount = 12
lifetime = 0.4
one_shot = false
explosiveness = 0.75
randomness = 0.2
initial_velocity = 95.0

[node name="ExplosionArea2D" type="Area2D" parent="." groups=["Enemy", "Hostile"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea2D"]
shape = SubResource( 5 )
disabled = true

[node name="LevelLabel" type="Label" parent="."]
margin_left = -28.0
margin_top = -96.0
margin_right = 28.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 9 )
text = "Lv.1"
align = 1

[node name="FrozenStatus" parent="." instance=ExtResource( 9 )]

[node name="GroundedStatus" parent="." instance=ExtResource( 10 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 6, 6 )
texture = ExtResource( 12 )
energy = 0.35

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
